Update obstacles to list.